# Desaf-o-1-INFORMATICA-2

./: Informe de responsabilidades Desafíos Info II.docx  README.md
Tablero/: CMakeLists.txt  tablero.cpp  tablero.h
tetris/: CMakeLists.txt  Piezas.h  colisiones.cpp  colisiones.h  comprobacion.cpp  comprobacion.h  main.cpp  piezas.cpp  rotar.cpp  rotar.h  tablero.cpp  tablero.h  tetris.pro
